changed paths just in case

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
     <main>
       <h2>Lorem</h2>
       <img
-        src="/images/pexels-eugenia-remark-5767088-28098015.jpg"
+        src="../images/pexels-eugenia-remark-5767088-28098015.jpg"
         alt="image goes here"
       />
       <p>
