--- a/pages/page2.html
+++ b/pages/page2.html
@@ -11,7 +11,7 @@
       <h1>Header Goes Here</h1>
       <nav>
         <ul class="navbar">
-          <li><a href="page1.html">Lorem ipsum dolor</a></li>
+          <li><a href="index.html">Lorem ipsum dolor</a></li>
           <li>
             <a href="page2.html" class="active">sit amet consectetur elit.</a>
           </li>
