--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
       <h1>Header Goes Here</h1>
       <nav>
         <ul class="navbar">
-          <li><a href="page1.html" class="active">Lorem ipsum dolor</a></li>
+          <li><a href="index.html" class="active">Lorem ipsum dolor</a></li>
           <li><a href="page2.html">sit amet consectetur elit.</a></li>
           <li><a href="page3.html">Aut laudantium, officiis</a></li>
         </ul>
