--- a/pages/page3.html
+++ b/pages/page3.html
@@ -21,7 +21,7 @@
       <h1>Header Goes Here</h1>
       <nav>
         <ul class="navbar">
-          <li><a href="page1.html">Lorem ipsum dolor</a></li>
+          <li><a href="index.html">Lorem ipsum dolor</a></li>
           <li><a href="page2.html">sit amet consectetur elit.</a></li>
           <li>
             <a href="page3.html" class="active">Aut laudantium, officiis</a>
