--- a/pages/index.html
+++ b/pages/index.html
@@ -42,6 +42,12 @@
           </select>
         </p>
         <p>
+          <label for="checkbox1">
+            <input type="checkbox" name="checkbox1" id="checkbox1" />
+            Click here to check the checkbox
+          </label>
+        </p>
+        <p>
           <button>Submit</button>
         </p>
       </form>
