added media queries

--- a/pages/page3.html
+++ b/pages/page3.html
@@ -21,11 +21,9 @@
       <h1>Header Goes Here</h1>
       <nav>
         <ul class="navbar">
-          <li><a href="index.html">Lorem ipsum dolor</a></li>
-          <li><a href="page2.html">sit amet consectetur elit.</a></li>
-          <li>
-            <a href="page3.html" class="active">Aut laudantium, officiis</a>
-          </li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="page2.html">Page 2</a></li>
+          <li><a href="page3.html">Page 3</a></li>
         </ul>
       </nav>
       <h3 id="userTools">
